ASSIGNMENT/KAVINDRA J-TEAM MEMBER 2/Assignment 4/Kubernetes/ibm_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-web

spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-web
  template:
    metadata:
      labels:
        app: flask-web

    spec:
      containers:
        - name: flaskwebsite
          image: jp.icr.io/flaskwebsite/website
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
