ASSIGNMENT/KAVINDRA J-TEAM MEMBER 2/Assignment 4/Kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-ser
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: flask-app-sri
